styles.css
/* imports for the fonts I'm using */
@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Overpass:ital,wght@0,100..900;1,100..900&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');

:root {
    /* base colours */
    --primary: #EA526F;
    --secondary: #E08E45;
    --accent: #C98BB9;
    --inverse: #F1F0EA;
    --bold: #423E3B;

    /* tints */
    --primary-tint: #EF8094;
    --secondary-tint: #EAB485;
    --accent-tint: #DEBAD5;

    /* tones */
    --primary-tone: #DA1B3E;
    --secondary-tone: #C06B21;
    --accent-tone: #A64E90;

    /* shades */
    --primary-shade: #7F1024;
    --secondary-shade: #8C4E18;
    --accent-shade: #7D3B6C;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

main {
    background: var(--primary);
    background: linear-gradient(90deg, rgba(234,82,111,1) 0%, rgba(224,142,69,1) 100%);
    background-repeat: no-repeat;

    width: 100vw;
    height: 100vh;
}

/*start up screen*/
#loading-main {
    flex-grow: 1;
    display: flex;
}

#start-up {
    font-family: 'Zilla Slab', sans-serif;
    font-size: 2.5rem;
    padding: 32px 16px;

    position: sticky;

    display: flex;
    flex-direction: column;

    color: var(--inverse);
    background-color: var(--bold);

    width: 100vw;
    height: 100vh;
    z-index: 500;
}

#highlight {
    color: var(--primary);
}

.center {
    text-align: center;
    margin: auto;
}

/* progress bar */
#loading-bar {
    height: 24px;
    width: 240px;
    
    border: 4px solid var(--inverse);
}

.bar {
    position: relative;

    background: var(--bold);
    overflow: hidden;
}

.bar span {
    display: block;
    height: 100%;
}

.progress {
    background-color: var(--accent);

    animation: progressBar 5s ease-in-out;
    animation-fill-mode:both; 
}

@keyframes progressBar {
    0% { width: 0; }
    80% { width: 80%; }
    97% { width: 97%; }
    100% { width: 100%; }
}

/*main page*/

/*task bar*/
.taskbar {
    background-color: var(--inverse);

    position: fixed;
    bottom: 0;

    height: 64px;
    width: 100vw;
    z-index: 100;
}

#start {
    font-family: 'Zilla Slab', sans-serif;
    font-size: 1.75rem;
    font-weight: 600;
    

    background: var(--primary);
    background: radial-gradient(circle, rgba(234,82,111,1) 0%, rgba(218,27,62,1) 100%);
    color: var(--inverse);

    padding: 2px 4px;
    margin: 8px;

    width: 128px;
    height: 48px;
}

#start:active {
    background: var(--primary-tone);
    background: radial-gradient(circle, rgba(218,27,62,1) 0%, rgba(127,16,36,1) 100%);
}

